--- a/app/views/home/modules.html.erb
+++ b/app/views/home/modules.html.erb
@@ -1,1 +1,15 @@
-<h1>Modules Page</h1>
+<!-- collegemodules/index.html.erb -->
+<p style="color: green"><%= notice %></p>
+
+<h1>Collegemodules</h1>
+
+<div id="collegemodules">
+  <% @collegemodules.each do |collegemodule| %>
+    <%= render 'collegemodules/collegemodule', collegemodule: collegemodule %>
+    <p>
+      <%= link_to "Show this collegemodule", collegemodule %>
+    </p>
+  <% end %>
+</div>
+
+<%= link_to "New collegemodule", new_collegemodule_path %>
