working CRUD & login tests

--- a/app/views/collegemodules/_collegemodule.html.erb
+++ b/app/views/collegemodules/_collegemodule.html.erb
@@ -1,11 +1,11 @@
 <div id="<%= dom_id collegemodule %>">
   <p>
-    <strong>Module name:</strong>
+    <strong>Module Name:</strong>
     <%= collegemodule.module_name %>
   </p>
 
   <p>
-    <strong>Module:</strong>
+    <strong>Module ID:</strong>
     <%= collegemodule.module_id %>
   </p>
 
