--- a/app/views/collegemodules/edit.html.erb
+++ b/app/views/collegemodules/edit.html.erb
@@ -1,10 +1,10 @@
-<h1>Editing collegemodule</h1>
+<h1>Edit Module</h1>
 
 <%= render "form", collegemodule: @collegemodule %>
 
 <br>
 
 <div>
-  <%= link_to "Show this collegemodule", @collegemodule %> |
-  <%= link_to "Back to collegemodules", collegemodules_path %>
+  <%= link_to "Show Module", @collegemodule %> |
+  <%= link_to "Return", collegemodules_path %>
 </div>
