--- a/app/views/collegemodules/_form.html.erb
+++ b/app/views/collegemodules/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: collegemodule, url: collegemodules_path, method: :post) do |form| %>
   <% if collegemodule.errors.any? %>
     <div style="color: red">
-      <h2><%= pluralize(collegemodule.errors.count, "error") %> prohibited this collegemodule from being saved:</h2>
+      <h2><%= pluralize(collegemodule.errors.count, "error") %> Error While Saving:</h2>
 
       <ul>
         <% collegemodule.errors.each do |error| %>
