--- a/app/views/collegemodules/new.html.erb
+++ b/app/views/collegemodules/new.html.erb
@@ -1,9 +1,9 @@
-<h1>New collegemodule</h1>
+<h1>New Module</h1>
 
 <%= render "form", collegemodule: @collegemodule %>
 
 <br>
 
 <div>
-  <%= link_to "Back to collegemodules", collegemodules_path %>
+  <%= link_to "Return", collegemodules_path %>
 </div>
