--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -6,12 +6,27 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <% if user_signed_in?%> # Shows pages ony in the user is signed in
         <li class="nav-item">
           <%= link_to 'Modules', home_modules_path, class: 'nav-link' %>
         </li>
         <li class="nav-item">
           <%= link_to 'Calendar', home_calendar_path, class: 'nav-link' %>
         </li>
+        <li class="nav-item">
+          <%= link_to 'Edit Account', edit_user_registration_path, class: 'nav-link' %>
+        </li>
+        <li class="nav-item">
+          <%= link_to 'Sign Out', destroy_user_session_path, class: 'nav-link' %>
+        </li>
+        <% else%>
+         <li class="nav-item">
+          <%= link_to 'Sign Up', new_user_registration_path, class: 'nav-link' %>
+        </li>
+         <li class="nav-item">
+          <%= link_to 'Sign In', new_user_session_path, class: 'nav-link' %>
+        </li>
+        <% end%>
       </ul>
       <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
