--- a/app/views/home/modules.html.erb
+++ b/app/views/home/modules.html.erb
@@ -3,13 +3,13 @@
 
 <h1>Collegemodules</h1>
 
-<div id="collegemodules">
+<div id="Modules">
   <% @collegemodules.each do |collegemodule| %>
     <%= render 'collegemodules/collegemodule', collegemodule: collegemodule %>
     <p>
-      <%= link_to "Show this collegemodule", collegemodule %>
+      <%= link_to "Show Module", collegemodule %>
     </p>
   <% end %>
 </div>
 
-<%= link_to "New collegemodule", new_collegemodule_path %>
+<%= link_to "New Module", new_collegemodule_path %>
