added calendar no tests

--- a/app/views/collegemodules/_collegemodule.html.erb
+++ b/app/views/collegemodules/_collegemodule.html.erb
@@ -10,7 +10,7 @@
   </p>
 
   <p>
-    <strong>Module lecturer:</strong>
+    <strong>Module Lecturer:</strong>
     <%= collegemodule.module_lecturer %>
   </p>
 
